# faststream_fastapi

./: .gitignore  .mypy.ini  .readthedocs.yaml  .ruff.toml  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  justfile  mre.py  pyproject.toml  search.json  zensical.toml
.github/workflows/: build-docs.yml  publish.yml  setup.yml
asyncapi/asyncapi_configure/: index.html
asyncapi/schema_export/: index.html
background_tasks/: index.html
context/: index.html
dependencies/: index.html
docs/: conf.py  index.md  index.rst
docs/asyncapi/: asyncapi_configure.md  schema_export.md
docs/background_tasks/: index.md
docs/context/: index.md
docs/dependencies/: index.md
docs/lifespan/: index.md
docs/testing/: index.md
lifespan/: index.html
src/faststream_fastapi/: __about__.py  __init__.py  asyncapi_config.py  asyncapi_router.py  context.py  faststream_api.py  stream_message.py
src/faststream_fastapi/_internal/: asyncapi_router.py  background_middleware.py  config.py  fastapi_compat.py  get_dependant.py  logger.py  replace_context.py  stream_message.py  wrap_callable_to_fastapi_compatible.py
src/faststream_fastapi/_internal/fs_re_exports/: _compat.py  application.py  broker.py  constants.py  context.py  di.py  logger.py
testing/: index.html
tests/: conftest.py
tests/base/: abstract.py  in_memory.py  real.py
tests/integrations/confluent/: abstract.py  test_in_memory.py  test_real.py
tests/integrations/kafka/: abstract.py  test_in_memory.py  test_real.py
tests/integrations/mqtt/: abstract.py  test_in_memory.py  test_real.py
tests/integrations/nats/: abstract.py  conftest.py  test_in_memory.py  test_real.py
tests/integrations/rabbit/: abstract.py  test_in_memory.py  test_real.py
tests/integrations/redis/: abstract.py  test_in_memory.py  test_real.py
