[build-system]
requires = ["uv_build==0.11.21"]
build-backend = "uv_build"

[project]
name = "faststream_fastapi"
description = "FastAPI integration for FastStream"
readme = "README.md"
authors = [
    { name = "Ivan Kirpichnikov", email = "mmssvvvv570@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"
version = "0.0.1"

keywords = [
    "rabbitmq",
    "kafka",
    "nats",
    "redis",
    "mqtt",
    "asyncapi",
    "framework",
    "message brokers",
    "fastapi",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "fastapi<1.0.0",
    "faststream>=0.7.0",
]

[dependency-groups]
linters = [
    "ruff==0.15.20",
    "typos==1.48.0",
    "codespell==2.4.3",
]
static_analysis = [
    "mypy==2.1.0",
    "bandit==1.9.4",
    "semgrep==1.169.0",
    "zizmor==1.27.0",
]
docs = [
    "zensical==0.0.50",
]

testing = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.2.1",
    "covdefaults>=2.3.0",
    { include-group = "testing-dependencies" },
]
testing-dependencies = [
    "httpx2==2.5.0",
    "asgi-lifespan==2.1.0",
    "faststream[rabbit,kafka,confluent,nats,redis,mqtt]>=0.7.0",
]

dev = [
    { include-group = "docs"},
    { include-group = "testing" },
    { include-group = "linters" },
    { include-group = "static_analysis" },
]

[tool.uv.build-backend]
module-root = "src"
module-name = "faststream_fastapi"

[tool.pytest.ini_options]
minversion = "7.0"
timeout = 30
addopts = "--strict-markers --strict-config -q -m 'not slow'"
testpaths = ["tests"]
markers = [
    "rabbit",
    "kafka",
    "confluent",
    "nats",
    "redis",
    "redis_cluster",
    "mqtt",
    "slow",
    "connected",
    "all",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/"]
relative_files = true

[tool.coverage.paths]
source = ["src/", "/app/src/"]

[tool.coverage.report]
exclude_lines = [
    "pass",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
]
